# BagFromImages

./: .gitignore  CMakeLists.txt  main.cc  run.sh
